compiler-frontend/parsing/tests/snapshots/parser__module_export_invalid.snap
---
source: compiler-frontend/parsing/tests/parser.rs
---
(
    Module@0..53
      ModuleHeader@0..52
        MODULE@0..6 "module"
        Annotation@6..7
          TEXT@6..7 " "
        ModuleName@7..26
          UPPER@7..26 "ModuleExportInvalid"
        ExportList@26..46
          Annotation@26..27
            TEXT@26..27 " "
          LEFT_PARENTHESIS@27..28 "("
          ExportValue@28..33
            LOWER@28..33 "hello"
          COMMA@33..34 ","
          ERROR@34..45
            ERROR@34..34 ""
            Annotation@34..35
              TEXT@34..35 " "
            INTEGER@35..38 "123"
            COMMA@38..39 ","
            ExportValue@39..45
              Annotation@39..40
                TEXT@39..40 " "
              LOWER@40..45 "world"
          RIGHT_PARENTHESIS@45..46 ")"
        Annotation@46..47
          TEXT@46..47 " "
        WHERE@47..52 "where"
      LAYOUT_START@52..52 ""
      LAYOUT_END@52..52 ""
      Annotation@52..53
        TEXT@52..53 "\n"
      END_OF_FILE@53..53 ""
    ,
    [
        ParseError {
            offset: 35,
            position: Position {
                line: 1,
                column: 36,
            },
            message: "Unexpected tokens in export list",
        },
    ],
)
