compiler-frontend/parsing/tests/snapshots/parser__module_export_module.snap
---
source: compiler-frontend/parsing/tests/parser.rs
---
(
    Module@0..49
      ModuleHeader@0..48
        MODULE@0..6 "module"
        Annotation@6..7
          TEXT@6..7 " "
        ModuleName@7..25
          UPPER@7..25 "ModuleExportModule"
        ExportList@25..42
          Annotation@25..26
            TEXT@25..26 " "
          LEFT_PARENTHESIS@26..27 "("
          ExportModule@27..41
            MODULE@27..33 "module"
            Annotation@33..34
              TEXT@33..34 " "
            ModuleName@34..41
              UPPER@34..41 "Exports"
          RIGHT_PARENTHESIS@41..42 ")"
        Annotation@42..43
          TEXT@42..43 " "
        WHERE@43..48 "where"
      LAYOUT_START@48..48 ""
      LAYOUT_END@48..48 ""
      Annotation@48..49
        TEXT@48..49 "\n"
      END_OF_FILE@49..49 ""
    ,
    [],
)
