compiler-frontend/parsing/tests/snapshots/parser__module_export_operator.snap
---
source: compiler-frontend/parsing/tests/parser.rs
---
(
    Module@0..40
      ModuleHeader@0..39
        MODULE@0..6 "module"
        Annotation@6..7
          TEXT@6..7 " "
        ModuleName@7..27
          UPPER@7..27 "ModuleExportOperator"
        ExportList@27..33
          Annotation@27..28
            TEXT@27..28 " "
          LEFT_PARENTHESIS@28..29 "("
          ExportOperator@29..32
            OPERATOR_NAME@29..32 "(+)"
          RIGHT_PARENTHESIS@32..33 ")"
        Annotation@33..34
          TEXT@33..34 " "
        WHERE@34..39 "where"
      LAYOUT_START@39..39 ""
      LAYOUT_END@39..39 ""
      Annotation@39..40
        TEXT@39..40 "\n"
      END_OF_FILE@40..40 ""
    ,
    [],
)
