compiler-frontend/parsing/tests/snapshots/parser__module_header_prefixed.snap
---
source: compiler-frontend/parsing/tests/parser.rs
---
(
    Module@0..29
      ModuleHeader@0..28
        MODULE@0..6 "module"
        Annotation@6..7
          TEXT@6..7 " "
        ModuleName@7..22
          Qualifier@7..18
            TEXT@7..18 "PureScript."
          UPPER@18..22 "Main"
        Annotation@22..23
          TEXT@22..23 " "
        WHERE@23..28 "where"
      LAYOUT_START@28..28 ""
      LAYOUT_END@28..28 ""
      Annotation@28..29
        TEXT@28..29 "\n"
      END_OF_FILE@29..29 ""
    ,
    [],
)
